# mapping-pinkertons

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  REVIEW.md  SPEC.md  TEMPLATE_AGENTS.md  TEMPLATE_SPEC.md  justfile  main.py
.github/workflows/: cicd--detectives-website.yml
data/: crosswalk.csv  el_paso.csv
db/migrations/: 000001_create_detectives_tables.down.sql  000001_create_detectives_tables.up.sql  000001_create_elpaso_tables.down.sql  000001_create_elpaso_tables.up.sql  000002_add_location_coordinates.down.sql  000002_add_location_coordinates.up.sql  000002_add_location_coordinates.up.sql.down.sql  000002_add_location_coordinates.up.sql.up.sql  000003_add_people_table.down.sql  000003_add_people_table.up.sql  000004_add_location_visits.down.sql  000004_add_location_visits.up.sql  000005_rename_roping_to_activity.down.sql  000005_rename_roping_to_activity.up.sql
detectives-website/: ADDING-VISUALIZATIONS.md  Dockerfile  Makefile  config.yaml  hugo_stats.json  justfile
detectives-website/content/: _index.md  about.md  activities.md  map.md
detectives-website/content/visualizations/: _index.md  dashboard.md  location-frequency.md  operative-activity.md  time-of-day.md
detectives-website/public/: 404.html  index.html  index.xml  sitemap.xml
detectives-website/public/author/: index.html  index.xml
detectives-website/public/categories/: index.html  index.xml
detectives-website/public/css/: style.css
detectives-website/public/posts/: index.html  index.xml
utils/: .env.example  geocoder.py  load_data.py  pyproject.toml
(+37 files in other folders)
