[project]
name = "mapping-pinkertons"
version = "0.1.0"
description = "A project of the Roy Rosenzweig Center for History and New Media to map Pinkerton detective activities in El Paso."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
]
